bpo-35972: _xxsubinterpreters: Fix potential integer truncation in channel_send()